--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
 *,
 *::before,
 *::after{
@@ -8,6 +9,5 @@
 }
 
 html{
-  font-family: 'Roboto', sans-serif;
   font-size: 10px;
 }
