--- a/src/homePageGallery/homePageGallery.css
+++ b/src/homePageGallery/homePageGallery.css
@@ -3,6 +3,8 @@
     grid-template-columns: repeat(6,1fr);
     grid-auto-rows: 100px 300px;
     grid-gap: 10px;
+    grid-auto-flow: dense;
+    padding: 0 50px;
 }
 
 .gallery-item{
@@ -30,24 +32,60 @@
     transform: scale(1.5);
 }
 .gallery-item .name{
-    position: absolute;
-    bottom: 2%;
-    right: 50%;
     opacity: 0;
-    transform: translate(-50%, -2%);
 
-    font-size: 20px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     color: #fff;
-    background-color: transparent;
-    pointer-events: none;
-    z-index: 4;
-
+    font-size: 15px;
+    text-transform: capitalize;
+    padding: 10px 16px;
+    text-align: left;
+    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.4));
     transition: .3s ease-in-out;
-    -webkit-backdrop-filter: blur(5px) saturate(1.8);
-    backdrop-filter: blur(5px) saturate(1.8);
 }
-
 .gallery-item:hover .name{
     opacity: 1;
-    padding: 1rem;
+}
+.width-1{
+    grid-column: span 1;
+}
+
+.width-2{
+    grid-column: span 2;
+}
+
+.width-3{
+    grid-column: span 3;
+}
+
+.width-4{
+    grid-column: span 4;
+}
+.width-5{
+    grid-column: span 5;
+}
+
+.width-6{
+    grid-column: span 6;
+}
+
+.height-1{
+    grid-row: span 1;
+}
+.height-2{
+    grid-row: span 2;
+}
+.height-3{
+    grid-row: span 3;
+}
+.height-4{
+    grid-row: span 4;
+}
+.height-5{
+    grid-row: span 5;
+}
+.height-6{
+    grid-row: span 6;
 }
