city pageImageComponent, listOfImages wip

--- a/src/components/navigation/navigation-style.scss
+++ b/src/components/navigation/navigation-style.scss
@@ -1,5 +1,6 @@
 .navigation {
   width: 95%;
+  height: 50px;
   margin: 0 auto;
 
   &__container {
@@ -26,6 +27,7 @@
   &__link {
     text-decoration: none;
     color: #222222;
+
   }
 
 
