--- a/src/homePageGallery/homePageGallery.css
+++ b/src/homePageGallery/homePageGallery.css
@@ -1,91 +1,8 @@
 .container{
     display: grid;
-    grid-template-columns: repeat(6,1fr);
-    grid-auto-rows: 100px 300px;
+    grid-template-columns: repeat(4,1fr);
+    grid-auto-rows: 200px 300px;
     grid-gap: 10px;
-    grid-auto-flow: dense;
-    padding: 0 50px;
-}
-
-.gallery-item{
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-.gallery-item .image{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.gallery-item .image img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: 50% 50%;
-    cursor: pointer;
-    transition: .5s ease-in-out;
-}
-
-.gallery-item:hover .image img{
-    transform: scale(1.5);
-}
-.gallery-item .name{
-    opacity: 0;
-
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    color: #fff;
-    font-size: 15px;
-    text-transform: capitalize;
-    padding: 10px 16px;
-    text-align: left;
-    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.4));
-    transition: .3s ease-in-out;
-}
-.gallery-item:hover .name{
-    opacity: 1;
-}
-.width-1{
-    grid-column: span 1;
-}
-
-.width-2{
-    grid-column: span 2;
-}
-
-.width-3{
-    grid-column: span 3;
-}
-
-.width-4{
-    grid-column: span 4;
-}
-.width-5{
-    grid-column: span 5;
-}
-
-.width-6{
-    grid-column: span 6;
-}
-
-.height-1{
-    grid-row: span 1;
-}
-.height-2{
-    grid-row: span 2;
-}
-.height-3{
-    grid-row: span 3;
-}
-.height-4{
-    grid-row: span 4;
-}
-.height-5{
-    grid-row: span 5;
-}
-.height-6{
-    grid-row: span 6;
+    /*grid-auto-flow: dense;*/
+    /*padding: 0 50px;*/
 }
