--- a/src/components/imageComponent/image-component-style.scss
+++ b/src/components/imageComponent/image-component-style.scss
@@ -1,9 +1,17 @@
 
 .gallery-item {
 
-  img {
-    width: 100px;
-    height: 50%;
+  &__image {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    object-position: 50% 50%;
+    cursor: pointer;
+
+    transition: .5s ease-in-out;
+  }
+
+  :hover &__image {
+    transform: scale(1.5);
   }
 }
