--- a/src/components/listOfImages/list-of-images-style.scss
+++ b/src/components/listOfImages/list-of-images-style.scss
@@ -1,47 +1,27 @@
 .gallery-item {
-  //width: 100%;
-  //height: 100%;
-  //position: relative;
-  //
-  //&__name {
-  //
-  //}
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+  &__name {
+    position: absolute;
+    bottom: 0;
+
+    width: 100%;
+    color: #fff;
+    font-size: 15px;
+    text-transform: capitalize;
+    padding: 10px 16px;
+    text-align: left;
+    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.4));
+    transition: .3s ease-in-out;
+
+    opacity: 0;
+  }
+
+  :hover &__name{
+    opacity: 1;
+  }
+
 }
 
-//.gallery-item .image {
-//  .gallery-item .image img {
-//    width: 100%;
-//    height: 100%;
-//    object-fit: cover;
-//    object-position: 50% 50%;
-//    cursor: pointer;
-//    transition: .5s ease-in-out;
-//  }
-//
-//  .gallery-item:hover .image img {
-//    transform: scale(1.5);
-//  }
-//
-//  .gallery-item .name {
-//    opacity: 0;
-//
-//    position: absolute;
-//    bottom: 0;
-//    width: 100%;
-//    color: #fff;
-//    font-size: 15px;
-//    text-transform: capitalize;
-//    padding: 10px 16px;
-//    text-align: left;
-//    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.4));
-//    transition: .3s ease-in-out;
-//  }
-//
-//  .gallery-item:hover .name {
-//    opacity: 1;
-//  }
-//
-//  width: 100%;
-//  height: 100%;
-//  overflow: hidden;
-//}
