--- a/src/homePageGallery/homePageGallery.css
+++ b/src/homePageGallery/homePageGallery.css
@@ -1,8 +1,9 @@
 .container{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-auto-rows: 200px 300px;
+    grid-auto-rows: 300px 300px;
     grid-gap: 10px;
-    /*grid-auto-flow: dense;*/
-    /*padding: 0 50px;*/
+    grid-auto-flow: dense;
+    padding: 20px 50px;
+    background-color: #F7F8FA;
 }
