--- a/src/components/listOfImages/list-of-images-style.scss
+++ b/src/components/listOfImages/list-of-images-style.scss
@@ -1,3 +1,13 @@
+.container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-auto-rows: 300px 300px;
+  grid-gap: 10px;
+  grid-auto-flow: dense;
+  padding: 20px 50px;
+  background-color: #F7F8FA;
+}
+
 .gallery-item {
   width: 100%;
   height: 100%;
