--- a/src/components/listOfImages/list-of-photos-style.scss
+++ b/src/components/listOfImages/list-of-photos-style.scss
@@ -13,6 +13,15 @@
   height: 100%;
   position: relative;
 
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    cursor: pointer;
+  }
+
   &__name {
     position: absolute;
     bottom: 0;
