--- a/src/pages/photoPage/photo-page-style.scss
+++ b/src/pages/photoPage/photo-page-style.scss
@@ -1,11 +1,67 @@
+.product-container {
+  display: flex;
+  width: 90%;
+  padding: 45px 60px;
+  margin: 0 auto;
+}
 
-.gallery-item {
+.product-art {
+  background-color: #E3E3E3;
+  flex-basis: 60%;
+}
 
-  &__image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: 50% 50%;
-    cursor: pointer;
+.product-sidebar {
+  flex-basis: 40%;
+  padding: 0 20px 20px 20px;
+
+  &__title {
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
   }
+
+  &__category {
+    font-size: 16px;
+    font-weight: normal;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+  }
+
+  &__tags {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.tag {
+  font-size: 12px;
+  font-weight: normal;
+  text-transform: uppercase;
+  padding: 4px 7px;
+  margin: 0 7px 7px 0;
+  border-radius: 3px;
+  border: 1px solid rgb(109, 115, 120);
+}
+
+.art {
+  width: 100%;
+  height: 100%;
+  padding: 30px;
+}
+
+.products-gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  &__title {
+    padding: 40px 0 20px 0;
+    text-transform: capitalize;
+  }
+}
+
+.product-icon{
+  width: 100px;
+  height: 100px;
+  margin: 0 7px 7px 0;
 }
